--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@ __pycache__/
 migrations/
 
 # Ignorer les fichiers d'environnements virtuels
+venv/
 .venv/
 .env
 *.env
 
 # Ignorer la base de données SQLite si tu utilises une base de données de développement locale
 db.sqlite3
+*.sqlite3
 
 # Ignorer les fichiers spécifiques à l'IDE ou à l'éditeur de texte
 .vscode/
@@ -17,3 +19,7 @@ db.sqlite3
 
 # Ignorer les fichiers de gestion des dépendances
 Pipfile.lock
+
+# Ignorer les fichiers temporaires
+*.log
+.DS_Store
